@@ -10,6 +10,8 @@ remctl (3.7-1) UNRELEASED; urgency=medium
       users who change the default configuration.  Sample systemd and
       upstart configurations are included in /usr/share/doc/remctl-server.
     - Net::Remctl classes now fail cleanly if the object is undef.
+  * Switch the default Ruby build to 1.9.1 to make it easier to remove the
+    Ruby 1.8 module build when ready to do so.
   * Update standards version to 3.9.5 (no changes required).
 
  -- Russ Allbery <rra@debian.org>  Mon, 06 Jan 2014 12:40:28 -0800
